<resources>
    <string name="app_name">Calculator</string>
    <string name="button_output">=</string>
    <string name="input" />
    <string name="output">" "</string>
    <string name="button_9">9</string>
    <string name="button_1">1</string>
    <string name="button_add">+</string>
    <string name="button_3">3</string>
    <string name="button_2">2</string>
    <string name="button_decimal">.</string>
    <string name="button_0">0</string>
    <string name="button_del">Del</string>
    <string name="button_clr">C</string>
    <string name="button_braces">( )</string>
    <string name="button_division">/</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_subtraction">-</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_percentage">%</string>
    <string name="button_multiply">*</string>
</resources>
