<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input"
        android:textSize="24sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="0dp"
        android:text="@string/output"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_percent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_8"
        android:text="@string/button_9"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_8" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_1"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/button_addition"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_subtraction"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_3"
        android:text="@string/button_add"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_3" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_6"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_2"
        android:text="@string/button_3"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_2" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_5"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_1"
        android:text="@string/button_2"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_1" />

    <Button
        android:id="@+id/button_decimal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_decimal"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_decimal"
        android:text="@string/button_0"
        android:layout_toEndOf="@id/button_decimal"
        android:layout_marginStart="15dp" />

    <Button
        android:id="@+id/button_output"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_addition"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_delete"
        android:text="@string/button_output"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_delete" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_zero"
        android:text="@string/button_del"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_zero" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/button_clr"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/button_braces"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/button_clear"
        android:text="@string/button_braces"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_clear" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/button_percent"
        android:text="@string/button_division"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_percent" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_7"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_4"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_8"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_4"
        android:text="@string/button_5"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_4" />

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_multiplication"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_6"
        android:text="@string/button_subtraction"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_6" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_9"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_5"
        android:text="@string/button_6"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_5" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_clear"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_7"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_braces"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_7"
        android:text="@string/button_8"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_7" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/button_braces"
        android:text="@string/button_percentage"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_braces" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/button_division"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/button_9"
        android:text="@string/button_multiply"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button_9" />
</RelativeLayout>